--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-<header>
-    Header hello!
-    Hello!
-</header>
+<header>Header</header>
 
 <main>
-
+    <article>Article</article>
+    <aside>Aside</aside>
 </main>
+<footer></footer>
 </body>
 </html>
